@@ -230,6 +230,8 @@ Release 2.8.0 - UNRELEASED
     HDFS-8855. Webhdfs client leaks active NameNode connections.
     (Xiaobing Zhou via Xiaoyu Yao)
 
+    HDFS-7390. Provide JMX metrics per storage type. (benoy)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
